Fix row spacing in tables; modify radial tree label positioning; fix method fields selection

--- a/src/server/website-source/app/styles/common.scss
+++ b/src/server/website-source/app/styles/common.scss
@@ -20,7 +20,10 @@ body {
     }
 }
 
-h1, h2, h3, h4, h5, h6 { text-transform: uppercase; }
+h1, h2, h3, h4, h5, h6 { 
+    text-transform: uppercase; 
+    margin-bottom: 6px;
+}
 
 a {
     text-decoration: none;
